Refatoração e correção do movimento
Setas tinham parado de funcionar, estão funcionando de novo